# Numerical-Analysis-Project

./: CMakeLists.txt  generate.py  main.cc  plot.py
GotoBLAS2/: Makefile.conf  f_check  getarch  getarch_2nd
GotoBLAS2/exports/: linktest.c  linux.def
GotoBLAS2/lapack-3.1.1/: make.inc
docs/: report.tex
rawData/atlas/: rawdata0_x.txt  rawdata0_y.txt  rawdata10_x.txt  rawdata10_y.txt  rawdata11_x.txt  rawdata11_y.txt  rawdata12_x.txt  rawdata12_y.txt  rawdata13_x.txt  rawdata13_y.txt  rawdata14_x.txt  rawdata14_y.txt  rawdata15_x.txt  rawdata15_y.txt  rawdata16_x.txt  rawdata16_y.txt  rawdata17_x.txt  rawdata17_y.txt  rawdata18_x.txt  rawdata18_y.txt  rawdata19_x.txt  rawdata19_y.txt  rawdata1_x.txt  rawdata1_y.txt  rawdata20_x.txt  rawdata20_y.txt  rawdata21_x.txt  rawdata21_y.txt  rawdata22_x.txt  rawdata22_y.txt  rawdata23_x.txt  rawdata23_y.txt  rawdata24_x.txt  rawdata24_y.txt  rawdata25_x.txt  rawdata25_y.txt  rawdata26_x.txt  rawdata26_y.txt  rawdata27_x.txt  rawdata27_y.txt  (+34 more)
rawData/goto2/: rawdata0_x.txt  rawdata0_y.txt  rawdata10_x.txt  rawdata10_y.txt  rawdata11_x.txt  rawdata11_y.txt  rawdata12_x.txt  rawdata12_y.txt  rawdata13_x.txt  rawdata13_y.txt  rawdata14_x.txt  rawdata14_y.txt  rawdata15_x.txt  rawdata15_y.txt  rawdata16_x.txt  rawdata16_y.txt  rawdata17_x.txt  rawdata17_y.txt  rawdata18_x.txt  rawdata18_y.txt  rawdata19_x.txt  rawdata19_y.txt  rawdata1_x.txt  rawdata1_y.txt  rawdata20_x.txt  rawdata20_y.txt  rawdata21_x.txt  rawdata21_y.txt  rawdata22_x.txt  rawdata22_y.txt  rawdata23_x.txt  rawdata23_y.txt  rawdata24_x.txt  rawdata24_y.txt  rawdata25_x.txt  rawdata25_y.txt  rawdata26_x.txt  rawdata26_y.txt  rawdata27_x.txt  rawdata27_y.txt  (+34 more)
rawData/lapack/: rawdata0_x.txt  rawdata0_y.txt  rawdata10_x.txt  rawdata10_y.txt  rawdata11_x.txt  rawdata11_y.txt  rawdata12_x.txt  rawdata12_y.txt  rawdata13_x.txt  rawdata13_y.txt  rawdata14_x.txt  rawdata14_y.txt  rawdata15_x.txt  rawdata15_y.txt  rawdata16_x.txt  rawdata16_y.txt  rawdata17_x.txt  rawdata17_y.txt  rawdata18_x.txt  rawdata18_y.txt  rawdata19_x.txt  rawdata19_y.txt  rawdata1_x.txt  rawdata1_y.txt  rawdata20_x.txt  rawdata20_y.txt  rawdata21_x.txt  rawdata21_y.txt  rawdata22_x.txt  rawdata22_y.txt  rawdata23_x.txt  rawdata23_y.txt  rawdata24_x.txt  rawdata24_y.txt  rawdata25_x.txt  rawdata25_y.txt  rawdata26_x.txt  rawdata26_y.txt  rawdata27_x.txt  rawdata27_y.txt  (+48 more)
results/atlas/: fitresults0.txt  fitresults1.txt  fitresults10.txt  fitresults11.txt  fitresults12.txt  fitresults13.txt  fitresults14.txt  fitresults15.txt  fitresults16.txt  fitresults17.txt  fitresults18.txt  fitresults19.txt  fitresults2.txt  fitresults20.txt  fitresults21.txt  fitresults22.txt  fitresults23.txt  fitresults24.txt  fitresults25.txt  fitresults26.txt  fitresults27.txt  fitresults28.txt  fitresults29.txt  fitresults3.txt  fitresults30.txt  fitresults31.txt  fitresults32.txt  fitresults33.txt  fitresults34.txt  fitresults35.txt  fitresults36.txt  fitresults4.txt  fitresults5.txt  fitresults6.txt  fitresults7.txt  fitresults8.txt  fitresults9.txt
results/goto2/: fitresults0.txt  fitresults1.txt  fitresults10.txt  fitresults11.txt  fitresults12.txt  fitresults13.txt  fitresults14.txt  fitresults15.txt  fitresults16.txt  fitresults17.txt  fitresults18.txt  fitresults19.txt  fitresults2.txt  fitresults20.txt  fitresults21.txt  fitresults22.txt  fitresults23.txt  fitresults24.txt  fitresults25.txt  fitresults26.txt  fitresults27.txt  fitresults28.txt  fitresults29.txt  fitresults3.txt  fitresults30.txt  fitresults31.txt  fitresults32.txt  fitresults33.txt  fitresults34.txt  fitresults35.txt  fitresults36.txt  fitresults4.txt  fitresults5.txt  fitresults6.txt  fitresults7.txt  fitresults8.txt  fitresults9.txt
results/lapack/: fitresults0.txt  fitresults1.txt  fitresults10.txt  fitresults11.txt  fitresults12.txt  fitresults13.txt  fitresults14.txt  fitresults15.txt  fitresults16.txt  fitresults17.txt  fitresults18.txt  fitresults19.txt  fitresults2.txt  fitresults20.txt  fitresults21.txt  fitresults22.txt  fitresults23.txt  fitresults24.txt  fitresults25.txt  fitresults26.txt  fitresults27.txt  fitresults28.txt  fitresults29.txt  fitresults3.txt  fitresults30.txt  fitresults31.txt  fitresults32.txt  fitresults33.txt  fitresults34.txt  fitresults35.txt  fitresults36.txt  fitresults37.txt  fitresults38.txt  fitresults39.txt  fitresults4.txt  fitresults40.txt  fitresults5.txt  fitresults6.txt  fitresults7.txt  fitresults8.txt  (+1 more)
results/test/: fitresults0.txt  fitresults1.txt  fitresults10.txt  fitresults11.txt  fitresults12.txt  fitresults13.txt  fitresults2.txt  fitresults3.txt  fitresults4.txt  fitresults5.txt  fitresults6.txt  fitresults7.txt  fitresults8.txt  fitresults9.txt
shellOutput/atlas/: shell0.txt  shell1.txt  shell10.txt  shell11.txt  shell12.txt  shell13.txt  shell14.txt  shell15.txt  shell16.txt  shell17.txt  shell18.txt  shell19.txt  shell2.txt  shell20.txt  shell21.txt  shell22.txt  shell23.txt  shell24.txt  shell25.txt  shell26.txt  shell27.txt  shell28.txt  shell29.txt  shell3.txt  shell30.txt  shell31.txt  shell32.txt  shell33.txt  shell34.txt  shell35.txt  shell36.txt  shell4.txt  shell5.txt  shell6.txt  shell7.txt  shell8.txt  shell9.txt
shellOutput/goto2/: shell0.txt  shell1.txt  shell10.txt  shell11.txt  shell12.txt  shell13.txt  shell14.txt  shell15.txt  shell16.txt  shell17.txt  shell18.txt  shell19.txt  shell2.txt  shell20.txt  shell21.txt  shell22.txt  shell23.txt  shell24.txt  shell25.txt  shell26.txt  shell27.txt  shell28.txt  shell29.txt  shell3.txt  shell30.txt  (+12 more)
(+55 files in other folders)
